# qurious

./: .gitignore  MANIFEST.in  README.md  agents.py  demo_gridworld.py  demo_manual.py  maze_environment.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sky-a100-lambda.yml  visualization.py
.github/workflows/: python-package.yml
data/: grid_world_100.jsonl  grid_world_100_chat.jsonl  grid_world_1k.jsonl  grid_world_1k_chat.jsonl  mql_test.jsonl  mql_train.jsonl  prompt_example.md  trajectories_100.json  trajectories_single_test.json  trajectories_single_train.json  trajectories_train.json
examples/: visualization_examples.py
examples/finetune_gsm8k_adapters/: prepare_dataset.py  train_gpt2.py
examples/mlflow_demo/: finetune_llm.ipynb  mlflow_demo.py
examples/text_classification_reinforce/: README.md  classification_policy.py  text_cls_env.py  train_grpo.py  train_reinforce.py
experiments/maze/: __init__.py  config.yaml  example.py  finetune.py  finetune_llm.ipynb  generate_dataset.py  maze_exp.py  maze_trainer.py  sft_hf.py
mini_rl/: __init__.py  agents.py  experience.py  policy.py  value_fns.py  visualize.py
mini_rl/environments/: environment.py  grid_world.py
notebooks/: demo_gridworld.ipynb  demo_mongodb_env.ipynb  environments.ipynb  tutorial_grpo_trl.ipynb  visualization.ipynb
qurious/: __init__.py  config.py  experience.py  mdp.py  utils.py  visualize.py
qurious/environments/: __init__.py  environment.py  grid_world.py
qurious/examples/: visualization_examples.py
qurious/experiments/: __init__.py  cli.py  example.py  experiment.py  logger.py  logging.py  run.py  test_logger.py  tracker.py
qurious/llms/: TRAINER.md  chat_with_model.py  config.py  config.yaml  generate_grid_data.py  grpo_grid.py  llm_grpo.py  llm_sft.py  lora_manager.py  trainer.py  utils.py
qurious/rl/: __init__.py  experience.py  mrp.py  policy.py  utils.py  value_fns.py
qurious/visualization/: README.md  __init__.py  action_value_layer.py  base.py  eligibility_trace_layer.py  grid_agent_layers.py  policy_layer.py  state_value_layer.py  trajectory_layer.py  utils.py  value_function_layer.py
tests/: test_agents.py  test_config.py  test_environments.py  test_experience.py  test_experiments.py  test_grid_world.py  test_llm_utils.py  test_logging.py  test_lora_manager.py  test_mdp.py  test_mongodb_environment.py  test_mrp.py  test_policy.py  test_trackers.py  test_trainer.py  test_utils.py  test_value_fns.py  test_visualization.py
(+21 files in other folders)
